# saxoflow-starter

./: .env  .gitattributes  .gitignore  LICENSE  README.md  bootstrap.py  bootstrap_venv.py  fixes.txt  main.py  pyproject.toml  pytest.ini  saxoflow.py  setup.sh  start.py
.github/rc-signoff/: cohort_rehearsal_scenarios.json  legacy_retirement_plan.json  transition_evidence.json  transition_usage_history.json
.github/workflows/: ci.yml  eda-tools.yml  heavy.yml  minimal.yml  rc-cutover-gate.yml
.saxoflow/teach/: progress.json
adder./: .gitignore  Bender.yml  Makefile
adder./formal/: adder_props_gen.sv
adder./pnr/: synth2openroad.v
cool_cli/: __init__.py  agent_session_log.py  agentic.py  ai_buddy.py  app.py  banner.py  bootstrap.py  commands.py  completers.py  constants.py  editors.py  exporters.py  file_ops.py  input_router.py  messages.py  panels.py  persistence.py  preferences.py  shell.py  state.py
cool_cli/coolcli/: ai_buddy.py  banner.py  commands.py  panels.py  shell.py
docs/: SAXOFLOW_TECHNICAL_REFERENCE.md  SAXOFLOW_TOOL_ADDITIONS.md  SAXOFLOW_TUTOR_IMPLEMENTATION_PLAN.md  simple_plan.txt  smacd2026_saxoflow_paper.tex
input/spec/: moore_spec.md
mux/: Makefile
packs/: __init__.py
packs/efcl_winter2026/: pack.yaml
packs/ethz_ic_design/: pack.yaml
saxoflow/: __init__.py  __main__.py  cli.py  cli_contracts.py  command_registry.py  command_resolver.py  diagnose.py  diagnose_tools.py  doctor.py  doctor_tools.py  env_setup.py  flow_commands.py  init_project.py  interactive_env.py  lintflow.py  makeflow.py  pdk_cli.py  pdk_registry.py  pnrflow.py  project.py  project_manifest.py  runtime_paths.py  schematicflow.py  synthflow.py  tools.py  unit_project.py
saxoflow/ai/: __init__.py  cli.py  contracts.py  run_store.py
saxoflow/graph/: __init__.py  runtime.py  state.py
saxoflow/installer/: __init__.py  interactive_env.py  presets.py  runner.py
saxoflow/pdks/: asap7.yaml  gf180mcu.yaml  ihp-sg13g2.yaml  nangate45.yaml  sky130hd.yaml  sky130hs.yaml
saxoflow/schemas/: agents.py  artifacts.py  context.py  diagnostics.py  events.py  project.py  tools.py
saxoflow/services/: __init__.py  ai_command_service.py  ai_request_service.py  artifact_service.py  context_service.py  policy_service.py  project_service.py  web_research_service.py  workflow_service.py
saxoflow/source_manifests/: __init__.py  base.py  bender.py  service.py
saxoflow/teach/: __init__.py  _image_render.py  _tui_bridge.py  agent_dispatcher.py  checks.py  cli.py  command_map.py  indexer.py  pack.py  retrieval.py  runner.py  session.py
saxoflow/tool_backend/: __init__.py  base.py  cli_commands.py  managed_backend.py  nix_backend.py  system_backend.py
saxoflow/tools/: definitions.py  health.py  license_metadata.yaml  registry.py  registry.yaml
saxoflow/workspace/: __init__.py  cli.py  lockfiles.py  migrate.py  schema.py  validate.py
saxoflow_agenticai/: __init__.py  cli.py
saxoflow_agenticai/agents/: __init__.py  pnr_agent.py  sim_agent.py  synth_agent.py  tutor_agent.py
saxoflow_agenticai/config/: __init__.py  model_config.yaml
saxoflow_agenticai/core/: agent_base.py  agent_manager.py  agent_registry.py  agent_tool_registry.py  (+10 more)
scripts/: README.md  __init__.py  bootstrap.sh  check_command_parity.py  check_deps.sh  dev_setup.sh  install_nextpnr.sh  install_openroad.sh  install_symbiyosys.sh  install_tool.sh  install_verilator.sh  install_vscode.sh  setup.sh  setup_local_web_retrieval.sh
templates/: Makefile  __init__.py
tests/: conftest.py  selftest.py  selftest_v2.py  test_agenticai_core.py  test_ai_buddy.py  test_banner.py  test_coolcli_commands.py  test_definitions.py  test_diagnose_cli.py  test_diagnose_tools.py  test_generators.py  test_installer_runner.py  test_log_manager.py  test_makeflow.py  test_model_selector.py  test_panels.py  test_reviewers.py  test_start.py  test_unit_project.py  test_utils_file_utils.py
(+307 files in other folders)
