[project]
name = "saxoflow"
version = "1"
description = "Open-source professional RTL design and verification flow"
authors = [{name="SaxoFlow Labs", email="saxoflowlabs@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click",
  "questionary",
  "colorlog",
  "packaging",
  "python-dotenv",
  "requests",
  "jinja2",
  "pyyaml",
  "langchain>=0.2",
  "langchain-openai>=0.1.7",
  "langchain_anthropic",
  "langchain_google_genai",
  "rich",
  "prompt_toolkit",
  "pyfiglet",
  "pymupdf",
  "rank-bm25",
  "Pillow"
]

[project.scripts]
saxoflow = "saxoflow.cli:cli" 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["saxoflow", "saxoflow_agenticai"]

[tool.ruff]
line-length = 127
target-version = "py39"

[tool.ruff.lint]
# E9, F63, F7, F82 — syntax, undefined names (blocking)
# E501 — line length (informational, controlled by line-length above)
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Incrementally tighten: start permissive, harden per-module as M7+ completes
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["saxoflow.command_registry", "saxoflow.command_resolver", "saxoflow.cli_contracts"]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=prepend"
norecursedirs = [".git", ".venv", "venv", "build", "dist", "site-packages", "tools-src", "3rdparty"]
